[trading] Portfolio view refactored with jface viewer
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@913 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -390,7 +390,7 @@
             name="%view.name.transactions"/>
       <view
             category="net.sourceforge.eclipsetrader"
-            class="net.sourceforge.eclipsetrader.trading.views.PortfolioView"
+            class="net.sourceforge.eclipsetrader.trading.portfolio.PortfolioView"
             icon="icons/eview16/money.png"
             id="net.sourceforge.eclipsetrader.views.portfolio"
             name="%view.name.portfolio"/>
