[ui] Added EclipseTrader presentation factory (replaces patching of org.eclipse.ui.workbench)
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@924 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -112,5 +112,12 @@
             id="org.eclipse.ui.views.ProgressView"
             name="%view.name.progressView"/>
    </extension>
+   <extension
+         point="org.eclipse.ui.presentationFactories">
+      <factory
+            class="net.sourceforge.eclipsetrader.TraderPresentationFactory"
+            id="net.sourceforge.eclipsetrader.presentation"
+            name="EclipseTrader"/>
+   </extension>
 
 </plugin>
