[trading] Transactions view refactored with jface viewer and strings externalization
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@926 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -384,7 +384,7 @@
       <view
             allowMultiple="true"
             category="net.sourceforge.eclipsetrader"
-            class="net.sourceforge.eclipsetrader.trading.views.TransactionsView"
+            class="net.sourceforge.eclipsetrader.trading.views.transactions.TransactionsView"
             icon="icons/eview16/book.png"
             id="net.sourceforge.eclipsetrader.views.transactions"
             name="%view.name.transactions"/>
