--- a/net.sourceforge.eclipsetrader.directaworld/plugin.xml
+++ b/net.sourceforge.eclipsetrader.directaworld/plugin.xml
@@ -5,13 +5,13 @@
          point="org.eclipse.ui.actionSets">
       <actionSet
             id="net.sourceforge.eclipsetrader.directaworld"
-            label="%actionSet.label.0"
+            label="%actionSet.label"
             visible="true">
          <action
                class="net.sourceforge.eclipsetrader.directaworld.actions.NewSecurityAction"
                icon="icons/it.gif"
                id="net.sourceforge.eclipsetrader.directaworld.newSecurity"
-               label="%action.label.0"
+               label="%action.label"
                menubarPath="file/newWizard/plugins"
                style="push"/>
       </actionSet>
@@ -28,13 +28,13 @@
             category="net.sourceforge.eclipsetrader.plugins"
             class="net.sourceforge.eclipsetrader.directaworld.GeneralPreferencesPage"
             id="net.sourceforge.eclipsetrader.directaworld.general"
-            name="%page.name.0"/>
+            name="%preferencePage.name"/>
    </extension>
    <extension
          point="net.sourceforge.eclipsetrader.core.feeds">
       <feed
-            id="%feed.id.0"
-            name="%feed.name.0">
+            id="%feed.id"
+            name="%feed.name">
          <quote class="net.sourceforge.eclipsetrader.directaworld.Feed"/>
       </feed>
    </extension>
