[borsaitalia] Completed strings externalization
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@944 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.borsaitalia/plugin.xml
+++ b/net.sourceforge.eclipsetrader.borsaitalia/plugin.xml
@@ -4,8 +4,8 @@
    <extension
          point="net.sourceforge.eclipsetrader.core.feeds">
       <feed
-            id="net.sourceforge.eclipsetrader.borsaitalia"
-            name="Borsa Italiana">
+            id="%feed.id"
+            name="%feed.name">
          <history class="net.sourceforge.eclipsetrader.borsaitalia.HistoryFeed"/>
       </feed>
    </extension>
