--- a/net.sourceforge.eclipsetrader.ta-lib/build.properties
+++ b/net.sourceforge.eclipsetrader.ta-lib/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                plugin.jar,\
                plugin.xml,\
                epl-v10.html,\
-               lib/
+               lib/,\
+               plugin.properties
