--- a/net.sourceforge.eclipsetrader.yahoo/build.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/build.properties
@@ -8,4 +8,6 @@ bin.includes = META-INF/,\
                data/,\
                icons/,\
                lib/,\
-               categories.fr.xml
+               categories.fr.xml,\
+               categories.it.xml,\
+               plugin.properties
