--- a/net.sourceforge.eclipsetrader.core/plugin.properties
+++ b/net.sourceforge.eclipsetrader.core/plugin.properties
@@ -1,3 +1,17 @@
+###############################################################################
+# Copyright (c) 2004-2007 Marco Maccaferri and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#     Marco Maccaferri - initial API and implementation
+###############################################################################
+
+Bundle-Name = Core
+Bundle-Vendor = EclipseTrader
+
 categoryName=EclipseTrader
 currenciesView=Currencies
 eventsView=Events
@@ -26,3 +40,7 @@ themeElementCategory.label.SecuritiesView = Securities View
 colorDefinition.label.Background = Background
 colorDefinition.label.Foreground = Foreground
 fontDefinition.label = Font
+loggin.preferencePage.name = Logging
+exchangeRate.action.label = Set Exchange Rate...
+logger.httpclient.description = Apache HttpClient
+logger.layout.extended.description = Extended
