[yahoo] Added securities list import wizard
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@954 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/plugin.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/plugin.properties
@@ -27,3 +27,5 @@ italy.news.preferencePage.name = Yahoo! Italia
 news.provider.name = Yahoo! Finance U.S.
 italy.news.provider.name = Yahoo! Finance Italy
 france.news.provider.name = Yahoo! Finance France
+securities.import.wizard.name = Yahoo! Securities List
+securities.import.wizard.description = Download the securities lists from Yahoo! Finance.
