[core] Applied repository extension point patch by Lukas Neterda
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@955 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -8,6 +8,7 @@
    <extension-point id="loggingPreferences" name="Logging Preferences" schema="schema/loggingPreferences.exsd"/>
    <extension-point id="tradingProviders" name="Trading Providers" schema="schema/tradingProviders.exsd"/>
    <extension-point id="viewLabelProviders" name="View Label Providers" schema="schema/viewLabelProviders.exsd"/>
+   <extension-point id="customRepository" name="Custom Repository" schema="schema/customRepository.exsd"/>
    <extension
          point="org.eclipse.ui.actionSets">
       <actionSet
