--- a/net.sourceforge.eclipsetrader.ui/plugin.xml
+++ b/net.sourceforge.eclipsetrader.ui/plugin.xml
@@ -6,8 +6,9 @@
       <view
             category="net.sourceforge.eclipsetrader"
             class="net.sourceforge.eclipsetrader.internal.ui.views.explorer.SecurityExplorer"
+            icon="icons/full/eview16/database.png"
             id="net.sourceforge.eclipsetrader.views.explorer"
-            name="Security Explorer"/>
+            name="Instruments Explorer"/>
    </extension>
 
 </plugin>
