[core.ui] Instruments Explorer: Added flat/hierarchical groups presentation, completed context menu, fixed theme support, class renames
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@962 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui/plugin.xml
+++ b/net.sourceforge.eclipsetrader.ui/plugin.xml
@@ -2,6 +2,22 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension
+         point="org.eclipse.ui.themes">
+      <themeElementCategory
+            id="instrumentsExplorer"
+            label="Instruments Explorer"/>
+      <colorDefinition
+            categoryId="instrumentsExplorer"
+            id="EXPLORER_BACKGROUND"
+            label="Background"
+            value="224,224,255"/>
+      <colorDefinition
+            categoryId="instrumentsExplorer"
+            id="EXPLORER_FOREGROUND"
+            label="Foreground"
+            value="0,0,0"/>
+   </extension>
+   <extension
          point="org.eclipse.ui.views">
       <view
             category="net.sourceforge.eclipsetrader"
