Plugin dependencies migration to Eclipse RCP 3.3
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@965 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -30,6 +30,10 @@
          <property
                name="windowImages"
                value="eclipse.gif,eclipse32.gif"/>
+         <property
+               name="appName"
+               value="EclipseTrader">
+         </property>
       </product>
    </extension>
    <extension
