[ats] Added trade system wizard creation extension point
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@969 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ats/plugin.xml
+++ b/net.sourceforge.eclipsetrader.ats/plugin.xml
@@ -3,7 +3,7 @@
 <plugin>
    <extension-point id="components" name="ATS Components" schema="schema/components.exsd"/>
    <extension-point id="strategies" name="ATS Strategies" schema="schema/strategies.exsd"/>
-   <extension-point id="systems" name="Automated Trading Systems" schema="schema/systems.exsd"/>
+   <extension-point id="systemWizards" name="Automated Trading Systems" schema="schema/systemWizards.exsd"/>
    <extension
          point="org.eclipse.ui.actionSets">
       <actionSet
