[core.ui] Securities view replaced with Securities Explorer view
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@976 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui/plugin.xml
+++ b/net.sourceforge.eclipsetrader.ui/plugin.xml
@@ -23,8 +23,8 @@
             category="net.sourceforge.eclipsetrader"
             class="net.sourceforge.eclipsetrader.internal.ui.views.explorer.SecurityExplorer"
             icon="icons/full/eview16/database.png"
-            id="net.sourceforge.eclipsetrader.views.explorer"
-            name="Instruments Explorer"/>
+            id="net.sourceforge.eclipsetrader.views.securities"
+            name="%securitiesView"/>
    </extension>
 
 </plugin>
