--- a/net.sourceforge.eclipsetrader/plugin.properties
+++ b/net.sourceforge.eclipsetrader/plugin.properties
@@ -3,7 +3,13 @@ productBlurb=EclipseTrader\n\
 Version: {0}\n\
 Build id: {1}\n\
 \n\
-{2}
+(c) Copyright EclipseTrader contributors and others 2004-2007. All rights reserved.\n\
+Visit http://eclipsetrader.sourceforge.net\n\
+\n\
+Icons artwork from famfamfam.com http://www.famfamfam.com/lab/icons/silk/\n\
+\n\
+This product includes software developed by the\n\
+Apache Software Foundation http://www.apache.org/
 
 product.name.eclipseTrader = EclipseTrader
 actionSet.label.softwareUpdates = Software Updates
