[nls] Added branding plugin
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@991 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.nls1-feature/.project
+++ b/net.sourceforge.eclipsetrader.nls1-feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.sourceforge.eclipsetrader.nls1</name>
+	<name>net.sourceforge.eclipsetrader.nls1-feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
