Fixed feature build settings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@992 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui/build.properties
+++ b/net.sourceforge.eclipsetrader.ui/build.properties
@@ -3,4 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                icons/,\
-               epl-v10.html
+               epl-v10.html,\
+               plugin.properties,\
+               plugin.xml
