--- a/net.sourceforge.eclipsetrader-feature/build.properties
+++ b/net.sourceforge.eclipsetrader-feature/build.properties
@@ -2,3 +2,4 @@ bin.includes = feature.xml,\
                epl-v10.html,\
                feature.properties,\
                eclipse_update_120.jpg
+qualifier = context
