--- a/net.sourceforge.eclipsetrader.news.nl1/build.properties
+++ b/net.sourceforge.eclipsetrader.news.nl1/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                epl-v10.html,\
-               plugin_it.properties
+               plugin_it.properties,\
+               plugin_de.properties
