--- a/net.sourceforge.eclipsetrader.nl1/build.properties
+++ b/net.sourceforge.eclipsetrader.nl1/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin_de.properties,\
-               epl-v10.html
+               epl-v10.html,\
+               plugin_it.properties
