--- a/net.sourceforge.eclipsetrader.charts.nl1/build.properties
+++ b/net.sourceforge.eclipsetrader.charts.nl1/build.properties
@@ -1,4 +1,6 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin_de.properties,\
+               plugin_fr.properties
