git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1015 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.nl1/build.properties
+++ b/net.sourceforge.eclipsetrader.nl1/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin_de.properties,\
                epl-v10.html,\
-               plugin_it.properties
+               plugin_it.properties,\
+               plugin_fr.properties
